--- a/AnimeStarts/Base.lproj/Main.storyboard
+++ b/AnimeStarts/Base.lproj/Main.storyboard
@@ -98,6 +98,7 @@
                             </scrollView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="o1h-WT-nvd">
                                 <rect key="frame" x="0.0" y="753" width="414" height="32"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="1oY-6P-HJX"/>
                                 </constraints>
@@ -106,6 +107,8 @@
                                     <segment title="Bad"/>
                                     <segment title="Good"/>
                                 </segments>
+                                <color key="tintColor" red="0.065237140299999996" green="0.26056675210000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="selectedSegmentTintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="0.39443967281853232" green="0.76622523671406417" blue="0.97651141881942749" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
