--- a/AnimeStarts/Base.lproj/Main.storyboard
+++ b/AnimeStarts/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R66-e8-jxg">
                                 <rect key="frame" x="0.0" y="88" width="414" height="657"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="muw-IK-QRT">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="438"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="muw-IK-QRT">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="598"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iFF-QM-ePM">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="368"/>
@@ -51,7 +51,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5m-6B-fA4">
-                                                <rect key="frame" x="0.0" y="378" width="58" height="30"/>
+                                                <rect key="frame" x="0.0" y="368" width="58" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Lye-Hp-oMG"/>
                                                 </constraints>
@@ -64,21 +64,25 @@
                                                     </fragment>
                                                 </attributedString>
                                                 <nil key="highlightedColor"/>
-                                                <color key="shadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="shadowOffset" width="3" height="0.0"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhV-Lh-Lbl">
-                                                <rect key="frame" x="0.0" y="418" width="414" height="20"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="27" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhV-Lh-Lbl">
+                                                <rect key="frame" x="0.0" y="398" width="414" height="200"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="fJE-3h-BuJ"/>
+                                                </constraints>
                                                 <attributedString key="attributedText">
                                                     <fragment content="placeholder">
                                                         <attributes>
-                                                            <font key="NSFont" size="17" name="ArialRoundedMTBold"/>
+                                                            <font key="NSFont" size="14" name="ArialRoundedMTBold"/>
                                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
                                                     </fragment>
                                                 </attributedString>
                                                 <nil key="highlightedColor"/>
                                                 <color key="shadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                <size key="shadowOffset" width="2" height="2"/>
                                             </label>
                                         </subviews>
                                         <constraints>
@@ -125,7 +129,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Reccomended Order" id="jcN-Sh-SmN" userLabel="Reccomended Order"/>
                     <navigationItem key="navigationItem" title="AnimeTitle" id="VjM-y5-kI7">
-                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="os2-xm-0e4">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="os2-xm-0e4">
                             <connections>
                                 <action selector="leftButtonCommit:" destination="aYc-ey-TyG" id="hGm-eW-FlT"/>
                             </connections>
@@ -228,7 +232,7 @@
                                                 </fragment>
                                             </attributedString>
                                             <nil key="highlightedColor"/>
-                                            <color key="shadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <size key="shadowOffset" width="2" height="0.0"/>
                                         </label>
                                     </subviews>
